--- a/Lecture/Week 2/Lecture 4 - Higher Order Functions/Lecture 4 - Higher Order Functions.ipynb
+++ b/Lecture/Week 2/Lecture 4 - Higher Order Functions/Lecture 4 - Higher Order Functions.ipynb
@@ -781,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We wen through all this work to write a general version of summation, then we used it to `natural numbers` and `cubes`. But what about the last term?\n",
+    "We went through all this work to write a general version of summation, then we used it to `natural numbers` and `cubes`. But what about the last term?\n",
     "\n",
     "<img src = 'last.jpg' width = 400/>\n",
     "\n",
@@ -1404,7 +1404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
