--- a/Lab/lab09/Required Questions.ipynb
+++ b/Lab/lab09/Required Questions.ipynb
@@ -384,6 +384,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define nil ())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WWSD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(filter even? '(1 2 3 4))\n",
+    "; Ans: (2 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(filter odd? '(1 3 5))\n",
+    "; Ans: (1 3 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(filter odd? '(2 4 6 1))\n",
+    "; Ans: (1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(filter even? '(3))\n",
+    "; Ans: ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(filter odd? nil)\n",
+    "; Ans: ()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -394,7 +460,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a classic recursive implementation. The base case is that if `lst` is empty, then we just return an empty list."
+    "This is a basic recursive implementation. However, it might be a little difficult at first since we're not used to implementing recursive case in Scheme yet.\n",
+    "\n",
+    "The base case is that if have gone all the elements in `lst`, in which `lst` will be empty, then just return an empty list."
    ]
   },
   {
@@ -403,43 +471,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "((null? lst) '()) "
+    "((null? lst) ())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then if applying `f` to the first element of the list `lst` returns `#t`, start creating a list (using `cons`) with the `car` of that element and the `cdr` of recursive call of `filter` to the `cdr` of the `lst`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;31m\n",
-      "Traceback (most recent call last):\n",
-      "  File \"In [28]\", line 1, col 9\n",
-      "RunTimeError: unbound variable 'lst'\n",
-      "\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
-    "(f (car lst) (cons (car lst) (filter f (cdr lst))))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Otherwise, we call recursive `filter` on the rest of the element, excluding `car lst`."
+    "Then if applying `f` to the first element of `lst` returns true, then start constructing a list with `cons`, using `car lst` as the `first` and recursive call `filter f (cdr lst)` as `.rest`"
    ]
   },
   {
@@ -448,7 +487,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(else (f (cdr lst)))"
+    "( (f (car lst)) (cons (car lst) (filter f (cdr lst))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otherwise, move on to the next element by shifting `lst`,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(else (filter f (cdr lst)))"
    ]
   },
   {
@@ -457,6 +512,142 @@
    "source": [
     "The implementation would look like the following,"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define (filter f lst)\n",
+    "  (cond\n",
+    "  ; Base case: if lst is empty, then just return an empty list\n",
+    "  ((null? lst) ())\n",
+    "  ; Recursive case: If appyling f on the first element of lst returns true,\n",
+    "  ; construct a list with cons using (car lst) as first and (filter f (cdr lst)) as rest\n",
+    "  ( (f (car lst)) (cons (car lst) (filter f (cdr lst))))\n",
+    "  ; Otherwise, check for the result of applying f to the next element of lst\n",
+    "  (else (filter f (cdr lst)))\n",
+    "  )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q5: Make Adder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WWSD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define add-two (make-adder 2))\n",
+    "(define add-three (make-adder 3))\n",
+    "(add-two 2)\n",
+    "; Ans: 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define add-two (make-adder 2))\n",
+    "(define add-three (make-adder 3))\n",
+    "(add-two 3)\n",
+    "; Ans: 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define add-two (make-adder 2))\n",
+    "(define add-three (make-adder 3))\n",
+    "(add-three 3)\n",
+    "; Ans: 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define add-two (make-adder 2))\n",
+    "(define add-three (make-adder 3))\n",
+    "(add-three 9)\n",
+    "; Ans: 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a simple higher-order function, which rather than using nested `define` forms, might as well use `lambda`. We want the lambda function to take the argument `x` and returns the result of summing `num` with `x`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(lambda (x) (+ num x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The complete implementation would look like the following,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define (make-adder num)\n",
+    "  (lambda (x) (+ num x))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
