--- a/Guerilla/Guerrilla 03/Challenge Question.ipynb
+++ b/Guerilla/Guerrilla 03/Challenge Question.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Writer Notes\n",
+    "The problems that are labeled **CONSULTED SOLUTION MANUAL** are the problems where I could not fully understand even with the solution manual."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -36,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Challenge Question"
+    "## Challenge Question -- CONSULTED SOLUTION MANUAL"
    ]
   },
   {
@@ -65,6 +73,45 @@
    "metadata": {},
    "source": [
     "**a.** Write a function `print_level_sorted` that takes in a tree as the parameter and returns a list of the values of the nodes in level order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterative Implementation\n",
+    "def level_order(tree):\n",
+    "    if not tree:\n",
+    "        return []\n",
+    "    current_level, next_level = [label(tree)], [tree]\n",
+    "    while next_level:\n",
+    "        find_next = []\n",
+    "        for b in next_level:\n",
+    "            find_next.extend(branches(b))\n",
+    "        next_level = find_next\n",
+    "        current_level.extend([label(t) for t in next_level])\n",
+    "    return current_level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recursive Implementation\n",
+    "def leveL_order(tree):\n",
+    "    def find_next(current_level):\n",
+    "        if current_level == []:\n",
+    "            return []\n",
+    "        else:\n",
+    "            next_level = []\n",
+    "            for b in current_level:\n",
+    "                next_level.extend(branches(b))\n",
+    "            return [label(t) for t in next_level] + find_next(next_level)\n",
+    "    return [label(tree)] + find_next([tree])"
    ]
   }
  ],
