--- a/Lab/lab07/Optional.ipynb
+++ b/Lab/lab07/Optional.ipynb
@@ -349,7 +349,7 @@
    "outputs": [],
    "source": [
     "if isinstance(link.first, Link):\n",
-    "    deep_map_mut(fn, link.first)\n"
+    "    deep_map_mut(fn, link.first)"
    ]
   },
   {
@@ -386,7 +386,7 @@
     "def deep_map_mut(fn, link):\n",
     "    if not link:\n",
     "        return\n",
-    "    if isinstance(link.first, Link):\n",
+    "    elif isinstance(link.first, Link):\n",
     "        deep_map_mut(fn, link.first)\n",
     "    else:\n",
     "        link.first = fn(link.first)    \n",
@@ -452,18 +452,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One way to implement `has_cycle` is to use a list `[]` that keeps track of the `Link` object that Python has gone through so far."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "link = Link(1, Link(2, Link(3)))\n",
-    "link.rest.rest.rest = link\n",
-    "\n",
+    "links = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation is as the following,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "links = []\n",
     "while link is not Link.empty:\n",
+    "    if link in links:\n",
+    "        return True\n",
     "    links.append(link)\n",
-    "    link = link.rest"
+    "    link = link.rest\n",
+    "return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The idea is:\n",
+    "\n",
+    "**1.** We loop through the `link` and we stop it when we reach an empty link. This makes sense because:\n",
+    "* If the `link` was a cycle, we'll eventually find a repeated pattern and it'll return `True*\n",
+    "* If the `link` was not a cycle, we'll eventually come across an empty link. Python will exit the `while` loop and will return `False`."
    ]
   },
   {
@@ -472,8 +513,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def has_cycle(link):\n",
-    "    "
+    "while link is not Link.empty:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2.** Check if `link` is within the list `links`. If yes, then the `list` is a cycle. Return `True`."
    ]
   },
   {
@@ -482,22 +529,234 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if link in links:\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3.** As long as we haven't found a matching pattern, we add the current `link` object to the list `links`, then we shift `link` and repeat the loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links.append(link)\n",
+    "link = link.rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cycles - Challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an extra challenge, implement `has_cycle_constant` with only constant space. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The base case is that if `link` is empty in the first place, it's definitely not a cycle. Then just return `False`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if link is Link.empty:\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otherwise, we have a proper linked list.\n",
     "\n",
-    "\"\"\"Return whether link contains a cycle.\n",
+    "Make 2 pointers where one of them shifts slower than the other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slow, fast = link, link.rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With a proper linked list, we can use a `while` loop to check if a link is a cycle or not. We can use `fast` as the indicator (rather than using `slow`) since if the link is not a cycle, `fast` will become empty faster and Python will exit from the `while` loop quicker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while fast is not Link.empty:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `while` loop keeps running as long as `fast` is not empty. Then as a way of checking if the link is not a cycle, we can check if `fast.rest` is empty."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if fast.rest is Link.empty:\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or, we can check if `slow` is the same as `fast` or `fast.rest`. We can't check if `slow` is the same as `fast.rest.rest` or further than that since if it's not a cycle, `fast.rest.rest` might be an overkill from an empty link (e.g. the `rest` of an empty link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if slow is fast or slow is fast.rest \n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otherwise, we update `slow` to be `slow.rest` and `fast` to be `fast.rest.rest` Since `fast` supposed to shift faster!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slow, fast = slow.rest, fast.rest.rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation would look like the following"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_cycle_constant(link):\n",
+    "    if link is Link.empty:\n",
+    "        return False\n",
+    "    slow, fast = link, link.rest\n",
+    "    while fast is not Link.empty:\n",
+    "        if fast.rest is Link.empty:\n",
+    "            return False\n",
+    "        elif slow == fast:\n",
+    "            return True\n",
+    "        slow, fast = slow.rest, fast.rest.rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tree Practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q12 - Reverse Other -- CONSULTED SOLUTION MANUAL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function `reverse_other` that mutates the tree such that **labels** on every other (odd-depth) level are reversed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Mutates the tree such that nodes on every other (odd-depth) level\n",
+    "    have the labels of their branches all reversed.\n",
     "\n",
-    "    >>> s = Link(1, Link(2, Link(3)))\n",
-    "    >>> s.rest.rest.rest = s\n",
-    "    >>> has_cycle(s)\n",
-    "    True\n",
-    "    >>> t = Link(1, Link(2, Link(3)))\n",
-    "    >>> has_cycle(t)\n",
-    "    False\n",
-    "    >>> u = Link(2, Link(2, Link(2)))\n",
-    "    >>> has_cycle(u)\n",
-    "    False\n",
+    "    >>> t = Tree(1, [Tree(2), Tree(3), Tree(4)])\n",
+    "    >>> reverse_other(t)\n",
+    "    >>> t\n",
+    "    Tree(1, [Tree(4), Tree(3), Tree(2)])\n",
+    "    >>> t = Tree(1, [Tree(2, [Tree(3, [Tree(4), Tree(5)]), Tree(6, [Tree(7)])]), Tree(8)])\n",
+    "    >>> reverse_other(t)\n",
+    "    >>> t\n",
+    "    Tree(1, [Tree(8, [Tree(3, [Tree(5), Tree(4)]), Tree(6, [Tree(7)])]), Tree(2)])\n",
     "    \"\"\"\n",
     "import doctest\n",
     "doctest.testmod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_other(t):\n",
+    "    def reverse_helper(t, need_reverse):\n",
+    "        if t.is_leaf():\n",
+    "            return\n",
+    "        new_labs = [child.label for child in t.branches][::-1]\n",
+    "        for i in range(len(t.branches)):\n",
+    "            child = t.branches[i]\n",
+    "            reverse_helper(child, not need_reverse)\n",
+    "            if need_reverse:\n",
+    "                child.label = new_labs[i]\n",
+    "    reverse_helper(t, True)"
    ]
   }
  ],
