--- a/Lab/lab07/Required - Midterm Review.ipynb
+++ b/Lab/lab07/Required - Midterm Review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,138 +35,241 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy -- `bst_min` and `bst_max`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The base case is that if the tree is a leaf, then we just return the `label` of that tree."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if t.is_leaf():\n",
+    "    return t.label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otherwise, we take the `min` between the branches of the tree and the `label` of the current selected tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "return min([t.label] + [bst_min(branch for branch in t.branches)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, assuming that the `tree` is a valid binary search tree, we don't need to search through all branches. Instead, for `min`, we just search through the left branch. This change will speed up runtime since Python doesn't have to search through as much items as if it were to search through both branches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "return min(t.label + bst_min(t.branches[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation would look like the following,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bst_min(t):\n",
     "    if t.is_leaf():\n",
     "        return t.label\n",
-    "    return min([bst_min(branch) for branch in t.branches])"
+    "    return min(t.label + bst_min(t.branches[0])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def bst_max(t):\n",
-    "    if t.is_leaf():\n",
-    "        return t.label\n",
-    "    return max(bst_max(branch) for branch in t.branches)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t1 = Tree(6, [Tree(2, [Tree(1), Tree(4)]), Tree(7, [Tree(7), Tree(8)])])\n",
-    "bst_min(t1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bst_max(t1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "  1\n",
-      "  4\n",
-      "7\n",
-      "  7\n",
-      "  8\n"
-     ]
-    }
-   ],
-   "source": [
-    "for branch in t1.branches:\n",
-    "    print(branch)"
+    "And the implementation for `bst_max` is exactly the same, with the only difference that we use `max` instead of `min`, and that we search through the right branch. Recall that index `[-1]` means the first element from the end of a list."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'doctest' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-d759ba05addb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \"\"\"\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtestmod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'doctest' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def bst_max(t):\n",
+    "    if t.is_leaf():\n",
+    "        return t.label\n",
+    "    return max(t.label + bst_max(t.branches[-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy - `is_bst` -- CONSULTED SOLUTION MANUAL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The base case is that if the current tree is a `leaf`, then return `true`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if t.is_leaf():\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**I can't undestand the rest of the implementation**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In-order Traversal -- CONSULTED FROM SOLUTION MANUAL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that returns a generator that generates an \"in-order\" traversal, in which we yield the value of everynode in order from left to right, assuming that each node has either 0 or 2 branches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
-    "\"\"\"Returns True if the Tree t has the structure of a valid BST.\n",
+    "\"\"\"\n",
+    "    Generator function that generates an \"in-order\" traversal, in which we \n",
+    "    yield the value of every node in order from left to right, assuming that each node has either 0 or 2 branches.\n",
     "\n",
-    "    >>> t1 = Tree(6, [Tree(2, [Tree(1), Tree(4)]), Tree(7, [Tree(7), Tree(8)])])\n",
-    "    >>> is_bst(t1)\n",
-    "    True\n",
-    "    >>> t2 = Tree(8, [Tree(2, [Tree(9), Tree(1)]), Tree(3, [Tree(6)]), Tree(5)])\n",
-    "    >>> is_bst(t2)\n",
-    "    False\n",
-    "    >>> t3 = Tree(6, [Tree(2, [Tree(4), Tree(1)]), Tree(7, [Tree(7), Tree(8)])])\n",
-    "    >>> is_bst(t3)\n",
-    "    False\n",
-    "    >>> t4 = Tree(1, [Tree(2, [Tree(3, [Tree(4)])])])\n",
-    "    >>> is_bst(t4)\n",
-    "    True\n",
-    "    >>> t5 = Tree(1, [Tree(0, [Tree(-1, [Tree(-2)])])])\n",
-    "    >>> is_bst(t5)\n",
-    "    True\n",
-    "    >>> t6 = Tree(1, [Tree(4, [Tree(2, [Tree(3)])])])\n",
-    "    >>> is_bst(t6)\n",
-    "    True\n",
-    "    >>> t7 = Tree(2, [Tree(1, [Tree(5)]), Tree(4)])\n",
-    "    >>> is_bst(t7)\n",
-    "    False\n",
+    "    For example, take the following tree t:\n",
+    "            1\n",
+    "        2       3\n",
+    "    4     5\n",
+    "         6  7\n",
+    "\n",
+    "    We have the in-order-traversal 4, 2, 6, 5, 7, 1, 3\n",
+    "\n",
+    "    >>> t = Tree(1, [Tree(2, [Tree(4), Tree(5, [Tree(6), Tree(7)])]), Tree(3)])\n",
+    "    >>> list(in_order_traversal(t))\n",
+    "    [4, 2, 6, 5, 7, 1, 3]\n",
     "    \"\"\"\n",
     "import doctest\n",
     "doctest.testmod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The base case is that if the current selected tree is a leaf, then yield the `label`,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if t.is_leaf():\n",
+    "    yield t.label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otherwise, \n",
+    "\n",
+    "**1.** `yield from` the left branch\n",
+    "\n",
+    "**2.** `yield` the label\n",
+    "\n",
+    "**3.** `yield from` right branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "else:\n",
+    "    left, right = t.branches\n",
+    "    yield from in_order_traversal(left)\n",
+    "    yield t.label\n",
+    "    yield from in_order_traversal(right)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation would look like the following,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if t.is_leaf():\n",
+    "    yield t.label\n",
+    "else:\n",
+    "    left, right = t.branches\n",
+    "    yield from in_order_traversal(left)\n",
+    "    yield t.label\n",
+    "    yield from in_order_traversal(right)"
    ]
   },
   {
