--- a/Guerilla/Guerrilla 04/Mutable Trees.ipynb
+++ b/Guerilla/Guerrilla 04/Mutable Trees.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,45 +300,147 @@
    "metadata": {},
    "source": [
     "#### Strategy:\n",
-    "We would need a `helper` function that keeps track the level. "
+    "We would need a `helper` function that keeps track the current level."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def helper(tree, level):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the level is divisible by `n`, then we apply `fn` to the `label` of the tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if level % n == 0:\n",
+    "    tree.label = fn(tree.label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We traverse through each branch and call the `helper` function again on each branch. However, when we call the `helper` function, we increment the `level` argument since we are getting deeper down the tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for branch in tree.branches:\n",
+    "        helper(branch, level+1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then outside the `helper` definition, we call the `helper` function on `tree`, starting with level 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helper(tree, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation is as the following,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nth_level_tree_map(fn, tree, n):\n",
+    "    def helper(tree, level):\n",
+    "        if level % n == 0:\n",
+    "            tree.label = fn(tree.label)\n",
+    "        for branch in tree.branches:\n",
+    "                helper(branch, level + 1)\n",
+    "    helper(tree, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we don't need to use a base case of when we reach the end of a tree. When we use `for` loop to loop through the branches, Python will stop running as it tries to loop through an empty list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Beware"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do not use `else` statement!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "else:\n",
+    "    for branch in tree.branches:\n",
+    "        helper(branch, level + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we implement the `else` statement above,, every time Python fulfill the condition `level % n == 0`, it won't run the rest of the code!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********************************************************************\n",
-      "File \"__main__\", line 6, in __main__\n",
-      "Failed example:\n",
-      "    tree\n",
-      "Expected:\n",
-      "    Tree(2, [Tree(7, [Tree(4), Tree(5), Tree(6)]), Tree(2, [Tree(7), Tree(5)])])\n",
-      "Got:\n",
-      "    Tree(1, [Tree(7, [Tree(4), Tree(5), Tree(6)]), Tree(2, [Tree(7), Tree(5)])])\n",
-      "**********************************************************************\n",
-      "1 items had failures:\n",
-      "   1 of   3 in __main__\n",
-      "***Test Failed*** 1 failures.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "TestResults(failed=1, attempted=3)"
+       "TestResults(failed=0, attempted=3)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " \n",
+    "\n",
     "\"\"\"Mutates a tree by mapping a function all the elements of a\n",
     "tree.\n",
     ">>> tree = Tree(1, [Tree(7, [Tree(3), Tree(4), Tree(5)]), Tree(2, [Tree(6), Tree(4)])])\n",
@@ -346,9 +448,17 @@
     ">>> tree\n",
     "Tree(2, [Tree(7, [Tree(4), Tree(5), Tree(6)]), Tree(2, [Tree(7), Tree(5)])])\n",
     "\"\"\"\n",
+    "\n",
     "import doctest\n",
     "doctest.testmod()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
