--- a/Discussion/Disc 08/6. Extra Questions.ipynb
+++ b/Discussion/Disc 08/6. Extra Questions.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Writer's Note\n",
+    "The problems labeled **CONSULTED SOLUTION MANUAL** are the problems where I needed the help of solution manual to solve."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -62,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.2\n",
+    "### 6.2 -- CONSULTED SOLUTION MANUAL\n",
     "Using the abstract data type above, write a function that sums up the entries of a tree, assuming that the entries are all numbers.\n",
     "\n",
     "`Hint`: You may want to use the `map` function, and also a write a helper function for summing up the entries of a list."
@@ -181,6 +189,43 @@
     "(define (tree-sum tree)\n",
     "  (+ (label tree) (sum (map tree-sum (branches tree))))\n",
     "  )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.3 -- CONSULTED SOLUTION MANUAL\n",
+    "Using the ADT defined in **6.1**, write a function that creates a new tree where the entries are the product of the entries along the path to the root in the original tree.\n",
+    "\n",
+    "`Hint`: You may want to write a helper function that keeps track of the current product."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = '6.3.jpg' width = 600/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define (path-product-tree t)\n",
+    "  (define (path-product t product)\n",
+    "    (let ((prod (* product (label t))))\n",
+    "      (make-tree prod\n",
+    "        (map (lambda (t) (path-product t prod))\n",
+    "             (branches tree)\n",
+    "             ); End of map\n",
+    "                 ); End of make-tree\n",
+    "      ) ; End of let\n",
+    "    ) ; End of helper function deifnition\n",
+    "  (path-product t 1)\n",
+    "  ); End of main function definition"
    ]
   },
   {
