Updated Scheme project progress

--- a/Projects/Project 4 - Scheme/Part 3 - User-Defined Procedures .ipynb
+++ b/Projects/Project 4 - Scheme/Part 3 - User-Defined Procedures .ipynb
@@ -810,7 +810,45 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following the description given by the problem statement, BEWARE that the given `env` is not the frame in which the procedure is **defined**, but instead the frame in which the procedure is **called**.\n",
+    "\n",
+    "A common mistake is that we implement the `make_call_frame` as the following,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_call_frame(self, args, env):\n",
+    "    return env.make_child_frame(self.formals, args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the implementation above, we are calling the `make_child_frame` method on the environment in which the procedure is called! Instead, we want to call the method on the environment in which the procedure is defined, which is `self.env`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_call_frame(self, args, env):\n",
+    "    return self.env.make_child_frame(self.formals, args)"
+   ]
   }
  ],
  "metadata": {
