--- a/Projects/Project 4 - Scheme/Part II - Special Forms.ipynb
+++ b/Projects/Project 4 - Scheme/Part II - Special Forms.ipynb
@@ -858,18 +858,102 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Similar to `do_lambda_form`, `do_mu_form` returns a `MuProcedure`. The difference is that `MuProcedure` doesn't use `env` argument."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def do_mu_form(expressions, env):\n",
+    "    \"\"\"Evaluate a mu form.\"\"\"\n",
+    "    check_form(expressions, 2)\n",
+    "    formals = expressions.first\n",
+    "    check_formals(formals)\n",
+    "    \n",
+    "    return MuProcedure(formals, expressions.second)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strategy - `MuProcedure`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After implementing `do_mu_form`, if we try to run the `ok` test again,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Error: expected\n",
+    "#     13\n",
+    "# but got\n",
+    "#     Traceback (most recent call last):\n",
+    "#       ...\n",
+    "#     AttributeError: 'MuProcedure' object has no attribute 'make_call_frame'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see from the error message above, we would need to implement `make_call_frame` method for the `MuProcedure`! If we look at `LambdaProcedure`, we can see that `LambdaProcedure` has a `make_call_frame` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LambdaProcedure(Procedure):\n",
+    "    \n",
+    "    def __init__(self, formals, body, env):\n",
+    "        self.formals = formals\n",
+    "        self.body = body\n",
+    "        self.env = env\n",
+    "        \n",
+    "    def make_call_frame(self, args, env):\n",
+    "        return self.env.make_child_frame(self.formals, args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this as an example. The difference is that `LambdaProcedure` has a parent environment, `self.env`, while `MuProcedure` doesn't have one. This is because in `MuProcedure`, the parent of a new call frame is the environment in which the call expression was **evaluated**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MuProcedure(Procedure):\n",
+    "    \n",
+    "    def __init__(self, formals, body):\n",
+    "        self.formals = formals\n",
+    "        self.body = body\n",
+    "        \n",
+    "    # Problem 16\n",
+    "    def make_call_frame(self, args, env):\n",
+    "        return env.make_child_frame(self.formals, args)"
+   ]
   }
  ],
  "metadata": {
