--- a/Lecture/Week 11/Lecture 30 - Macros/Video 2 - Programs as Data.ipynb
+++ b/Lecture/Week 11/Lecture 30 - Macros/Video 2 - Programs as Data.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The lesson here is that if we want to write a program that generates Scheme code, then just build a `list`. If at any point we have constructed a code and we want to know what will happen when we evaluate it, call `eval`. \n",
+    "The lesson here is that **if we want to write a program that generates Scheme code, then just build a** `list`. If at any point we have constructed a code and we want to know what will happen when we evaluate it, call `eval`. \n",
     "\n",
     "Python also has an `eval` function built-in that takes a string and tells us its value. What's special about Scheme is that it has all the built-in functionality for working with Scheme list and all the code are just lists. Thus it's easier to construct programs by writing things like `(list 'quotient 10 2)`.\n",
     "\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "(#<procedure> 1 2)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
    "source": [
     "However, above is not a Scheme code. Scheme code looks like `(+ 1 2)`. \n",
     "\n",
-    "Thus, the quotation `'` indicates that we don't yet want to evaluate the `+`. Instead, we just want to leave it as a symbol that will be evaluated as soon as we ask Scheme to compute the whole combination."
+    "We can add a quotation `'` that indicates that we don't yet want to evaluate the `+`. Instead, we just want to leave it as a symbol that will be evaluated as soon as we ask Scheme to compute the whole combination."
    ]
   },
   {
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also have an expression where part of it is evaluated, but the whole thing is left as a symbol. "
+    "We can also have an expression where only part of it is evaluated."
    ]
   },
   {
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see above, `(+ 2 3)` is evaluated, but the whole thing is not!\n",
+    "As we can see above, `(+ 2 3)` is evaluated, but not the whole expression!\n",
     "\n",
     "Now, if we have the following function, "
    ]
@@ -537,5 +537,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
